force-app/main/default/objects/Knowledge__kav/fields/Article_Governance__c.field-meta.xml
<CustomField>
    <fullName>Article_Governance__c</fullName>
    <description>Indicates whether a knowledge article is based off of an agents experience or the organization&apos;s compliance.</description>
    <label>Article Governance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experience-based</fullName>
            </value>
            <value>
                <fullName>Compliance-based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>