force-app/main/default/objects/Knowledge__kav/fields/Procedure_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Considerations__c</fullName>
    <label>Procedure Considerations</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>