force-app/main/default/objects/Knowledge__kav/fields/Procedure_Steps__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Steps__c</fullName>
    <label>Procedure Steps</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>