force-app/main/default/objects/Knowledge__kav/recordTypes/Procedure.recordType-meta.xml
<RecordType>
    <fullName>Procedure</fullName>
    <active>true</active>
    <description>Capture a series of ordered actions, motions, or operations in a knowledge Article.</description>
    <label>Procedure</label>
</RecordType>